@@ -12,6 +12,7 @@
   * Fix a bug when accessing a path with (.:format) (by github.com/klacointe)
   * Do not add unlock routes unless unlock strategy is email or both
   * Email should be case insensitive
+  * Store classes as string in session, to avoid serialization and stale data issues
 
 * deprecations
   * use_default_scope is deprecated and has no effect. Use :as or :devise_scope in the router instead
